# ChinaChoroKit

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: render-example.yml
assets/: README.md
config/: example_china_map.yaml
data/: province_values.csv
docs/: classification_methods.md
src/medmap_china/: __init__.py  render.py
